--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>STUPSY Executor - Premium Roblox Exploit</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="background-animation"></div>
-  
+<svg width="0" height="0" style="position: absolute;">
+  <defs>
+    <linearGradient id="hover-gradient" x1="0%" y1="0%" x2="100%" y2="100%">
+      <stop offset="0%" style="stop-color:#3b82f6" />
+      <stop offset="100%" style="stop-color:#8b5cf6" />
+    </linearGradient>
+  </defs>
+</svg>
   <header>
     <nav>
       <div class="logo">
@@ -17,23 +23,20 @@
       <div class="nav-links">
         <a href="#features">Features</a>
         <a href="interface.html">Interface</a>
-        <a href="#download">Download</a>
-        <a href="https://discord.gg" target="_blank">Discord</a>
+        <a href="power.html">Power</a>
+        <a href="reviews.html">Reviews</a>
+        <a href="#" onclick="triggerDownload()">Download</a>
+        <a href="https://discord.gg/ntYjFKqeVK" target="_blank">Discord</a>
       </div>
     </nav>
   </header>
 
   <main>
     <section class="hero">
-      <h1 class="brand-text">STUPSY Executor</h1>
-      <p class="tagline">The most powerful Roblox executor with unmatched features and stability</p>
+      <h1>STUPSY</h1>
+      <p class="tagline">The Future of Roblox Exploitation</p>
       <div class="cta-buttons">
-        <button class="download-btn" onclick="triggerDownload()">
-          <svg class="download-icon" viewBox="0 0 24 24">
-            <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
-          </svg>
-          Download Now
-        </button>
+        <button class="download-btn" onclick="triggerDownload()">Download Now</button>
         <button class="key-system-btn" onclick="openKeySystem()">Get Key</button>
       </div>
     </section>
@@ -78,7 +81,7 @@
     <section class="showcase">
       <div class="showcase-content">
         <div class="showcase-image">
-          <img src="https://media.discordapp.net/attachments/1317510754441629760/1331694672636284971/stupsyexec.png?ex=67928ccf&is=67913b4f&hm=d2a0db284aeaca9d61bc7b3e85bf29543cc4884ee25c9f984225e59da27d80c3&=&format=webp&quality=lossless&width=1047&height=604" alt="stupsY Executor Interface" class="executor-preview">
+          <img src="stupsy eaxecpt.png" alt="stupsY Executor Interface" class="executor-preview">
         </div>
         <div class="showcase-details">
           <h2>Powerful Features</h2>
@@ -111,6 +114,118 @@
         </div>
       </div>
     </section>
+
+    <section class="features" style="background: rgba(15, 23, 42, 0.5);">
+      <h2>Power Features</h2>
+      <div class="feature-grid">
+        <div class="feature-card">
+          <svg class="feature-icon" viewBox="0 0 24 24">
+            <path d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.07.62-.07.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"/>
+          </svg>
+          <h3>High UNC Rate</h3>
+          <p>83% Execution Success Rate - Industry Leading Performance</p>
+        </div>
+
+        <div class="feature-card">
+          <svg class="feature-icon" viewBox="0 0 24 24">
+            <path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm7 10c0 4.52-2.98 8.69-7 9.93-4.02-1.24-7-5.41-7-9.93V6.3l7-3.11 7 3.11V11zm-11.59.59L6 13l4 4 8-8-1.41-1.42L10 14.17z"/>
+          </svg>
+          <h3>Level 7 Execution</h3>
+          <p>Full Level 7 Script Support with Enhanced Security Bypass</p>
+        </div>
+
+        <div class="feature-card">
+          <svg class="feature-icon" viewBox="0 0 24 24">
+            <path d="M13 2.05v3.03c3.39.49 6 3.39 6 6.92 0 .9-.18 1.75-.48 2.54l2.6 1.53c.56-1.24.88-2.62.88-4.07 0-5.18-3.95-9.45-9-9.95zM12 19c-3.87 0-7-3.13-7-7 0-3.53 2.61-6.43 6-6.92V2.05c-5.06.5-9 4.76-9 9.95 0 5.52 4.47 10 9.99 10 3.31 0 6.24-1.61 8.06-4.09l-2.6-1.53C16.17 17.98 14.21 19 12 19z"/>
+          </svg>
+          <h3>Silent Execution</h3>
+          <p>Execute Scripts Silently Without Detection or Logging</p>
+        </div>
+
+        <div class="feature-card">
+          <svg class="feature-icon" viewBox="0 0 24 24">
+            <path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>
+          </svg>
+          <h3>Premium Functions</h3>
+          <p>Access to Premium-Only Scripts and Commands</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="trust-section">
+      <h2>Why Trust STUPSY?</h2>
+      <div class="trust-grid">
+        <div class="trust-card">
+          <svg class="trust-icon" viewBox="0 0 24 24">
+            <path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-1 6h2v2h-2V7zm0 4h2v6h-2v-6z"/>
+          </svg>
+          <h3>Safety First</h3>
+          <p>Our executor is regularly scanned and verified to be 100% malware-free. We prioritize user safety above all else.</p>
+          <ul class="trust-points">
+            <li>Regular security audits</li>
+            <li>Virus-free certification</li>
+            <li>Transparent code base</li>
+          </ul>
+        </div>
+
+        <div class="trust-card">
+          <svg class="trust-icon" viewBox="0 0 24 24">
+            <path d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zM9 6c0-1.66 1.34-3 3-3s3 1.34 3 3v2H9V6zm9 14H6V10h12v10zm-6-3c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2z"/>
+          </svg>
+          <h3>Privacy Protected</h3>
+          <p>We never collect personal data or sensitive information. Your privacy is guaranteed with our zero-logging policy.</p>
+          <ul class="trust-points">
+            <li>No data collection</li>
+            <li>Secure execution</li>
+            <li>Private script storage</li>
+          </ul>
+        </div>
+
+        <div class="trust-card">
+          <svg class="trust-icon" viewBox="0 0 24 24">
+            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"/>
+          </svg>
+          <h3>Trusted Community</h3>
+          <p>Join our growing community of satisfied users. Our reputation speaks for itself.</p>
+          <ul class="trust-points">
+            <li>Lots of trusted users</li>
+            <li>24/7 support</li>
+            <li>Positive reviews</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="trust-statement">
+        <div class="trust-badge">
+          <svg class="badge-icon" viewBox="0 0 24 24">
+            <path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm7 10c0 4.52-2.98 8.69-7 9.93-4.02-1.24-7-5.41-7-9.93V6.3l7-3.11 7 3.11V11zm-11.59.59L6 13l4 4 8-8-1.41-1.42L10 14.17z"/>
+          </svg>
+        </div>
+        <h3>Our Commitment to Safety</h3>
+        <p>At STUPSY, we understand the importance of trust in the exploiting community. That's why we've built our executor with security at its core. Every update is thoroughly tested and verified before release, ensuring you always have a safe and reliable tool at your disposal.</p>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="review-form">
+        <h3>Write a Review</h3>
+        <div class="star-rating">
+          <span class="star" data-rating="1">★</span>
+          <span class="star" data-rating="2">★</span>
+          <span class="star" data-rating="3">★</span>
+          <span class="star" data-rating="4">★</span>
+          <span class="star" data-rating="5">★</span>
+        </div>
+        <input type="text" id="reviewerName" placeholder="Your Name" class="review-input">
+        <textarea id="reviewText" placeholder="Write your review here..." class="review-input"></textarea>
+        <button class="submit-review">Submit Review</button>
+      </div>
+
+      <div class="review-grid" id="reviewContainer">
+        <!-- Reviews will be dynamically added here -->
+      </div>
+    </section>
+
   </main>
 
   <div id="keySystemModal" class="modal">
